@@ -4,6 +4,7 @@ next:
           - Bug Fixes
             - fixed display of hoverable downtimes comments
             - fixed pnp graph waiting icon
+            - fixed rootid in statusmap when using filter
 
 1.74     Sun Jul  7 17:39:32 CEST 2013
           - added filter to statusmap
